--- a/README
+++ b/README
@@ -2,36 +2,26 @@
 python-recsys
 =============
 
-A python library for implementing a recommender system.
+A python library for implementing a recommender system.  Originally written by ocelma, forked by delvv.
 
 ==================
 INSTALLATION NOTES
 ==================
 
-1) Dependencies
+1) Just run:
+
+   pip install python-recsys
+
+..and you're all set!
+
+2) Dependencies
 
 python-recsys is build on top of Divisi2, with csc-pysparse (Divisi2 also requires NumPy, and uses Networkx).
 python-recsys also requires SciPy.
 
-To install the dependencies do something like this (Ubuntu):
+If you have any issues with installation (above), you can manually install the dependencies:
 
     sudo apt-get install python-scipy
     sudo apt-get install python-numpy
     sudo pip install csc-pysparse networkx divisi2
 
-    # If you don't have pip installed then do:
-    # sudo easy_install csc-pysparse
-    # sudo easy_install networkx
-    # sudo easy_install divisi2
-
-2) Download
-
-Download python-recsys from github: https://github.com/ocelma/python-recsys
-
-3) Install
-
-    tar xvfz python-recsys.tar.gz
-    cd python-recsys
-    sudo python setup.py install
-
-..and you're all set! (hopefully)
